--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+  .responsive {
+    @apply px-5 md:px-12 lg:px-32;
+  }
+}
+
+.ReactCollapse--collapse {
+  transition: height 500ms;
+}
